fix splash logo on IE

--- a/style/breakpoint/default/splash.styl
+++ b/style/breakpoint/default/splash.styl
@@ -34,6 +34,7 @@ header
    .logo
       display: block
       fill: $light
+      height: rem( 87 )
       left: 50%
       opacity: 0
       position: absolute
@@ -45,24 +46,25 @@ header
       width: rem( 188 )
 
    svg
+      display: block
       height: 100%
       width: 100%
 
    .big-wheel
       animation: spinTranslate 0.5s linear infinite
-      height: ( 31/90*100% )
-      left: ( 73/188*100% )
+      height: rem( 31 )
+      left: rem( 73 )
       position: absolute
-      top: ( 20/90*100% )
+      top: rem( 20 )
       transform: translate( -50%, -50% )
-      width: ( 30/188*100% )
+      width: rem( 30 )
       transform-origin: 0 0
 
    .small-wheel
       animation: spin 0.4s linear infinite
-      height:( 17/90*100% )
-      left: ( 70/188*100% )
+      height: rem( 17 )
+      left: rem( 70 )
       position: absolute
-      top: ( 58/90*100% )
-      width: ( 18/188*100% )
+      top: rem( 58 )
+      width: rem( 18 )
 
